# gz

./: README.md
src/fishbot_application/: package.xml  setup.py
src/fishbot_application/fishbot_application/: planner_benchmark.py  planner_benchmark_summary.py
src/fishbot_description/config/: fishbot_ros2_controller.yaml
src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/fishbot_description/urdf/fishbot/: base.urdf.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
src/fishbot_navigation2/: CMakeLists.txt  README.md
src/fishbot_navigation2/behavior_trees/: navigate_to_pose_stable.xml
src/fishbot_navigation2/config/: benchmark_map_registry.yaml  nav2_params.yaml  nav2_params_custom.yaml  nav2_params_navfn.yaml  nav2_params_smac.yaml  planner_benchmark_goals.yaml  planner_benchmark_goals_clutter.yaml  planner_benchmark_goals_maze.yaml  planner_benchmark_goals_office.yaml  planner_benchmark_goals_tb3_world.yaml  planner_benchmark_goals_warehouse.yaml  planner_benchmark_results.csv  planner_benchmark_summary.csv  planner_benchmark_summary.md  planner_benchmark_template.csv
src/fishbot_navigation2/launch/: navigation2.launch.py
src/fishbot_navigation2/maps/: room.pgm  room.yaml
src/nav2_custom_controller/: CMakeLists.txt  package.xml
src/nav2_custom_controller/src/: custom_controller.cpp
src/nav2_custom_planner/: CMakeLists.txt  package.xml
src/nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp
src/nav2_custom_planner/src/: nav2_custom_planner.cpp
(+18 files in other folders)
